# RobustSharpeRatioHAC

./: README.md  pyproject.toml
data/: process_data.py  ret_agg.csv  ret_agg.npy  ret_hedge.csv  ret_hedge.npy
robustsharpe/: __init__.py  robustsharpe.py  robustsharpe_relative.py
robustsharpe/legacy/: robust_relative_fast.py  robustsharpe_single.py
tests/: test_robustsharpe.py
