[tool.poetry]
name = "RobustSharpe"
version = "0.1.0"
description = ""
authors = ["michael.mark@epfl.ch <Majkee.920824>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
